@@ -1,3 +1,8 @@
+2012-03-01 Borut Razem <borut.razem AT siol.net>
+
+	* links.php: "Links - LCD Stuff" is back, thanks to Dave Helton
+	  who provided the baskup copy of lcd directory
+
 2012-02-28 Borut Razem <borut.razem AT siol.net>
 
 	* links.php: applied requests from Wbdocs tracker:
